src/objects/Preparation__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Public_ID__c</fullName>
        <externalId>true</externalId>
        <label>GW Public ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <label>Sales Event</label>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Preparations</relationshipLabel>
        <relationshipName>Preparations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preparations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Preparation</label>
    <nameField>
        <label>Preparation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preparations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>